--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 # Site settings
-title: *folio
-email: you@example.com
+title: paulk-async
+email: ohahaha822@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A simple, whitespace, helvetica based portfolio theme.
 baseurl:  # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
-twitter_username: twitter_username
 github_username:  github_username
 
 # Build settings
@@ -22,8 +21,5 @@ collections:
   portfolio:
     output: true
     permalink: /portfolio/:path/
-  poetry:
-    output: true
-    permalink: /poetry/:path/
 
 
