--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: paulk-async
+title: 아직 정체성 찾는 중
 email: ohahaha822@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A simple, whitespace, helvetica based portfolio theme.
 baseurl:  # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
-github_username:  github_username
+github_username:  paulk-async
 
 # Build settings
 markdown: kramdown
